Fixed header spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -73,12 +73,16 @@ body {
 /* HEADER */
 
 #pageHeader .logo > img {
-	max-width: 34px;
+	max-width: 40px;
 	filter: drop-shadow(0 0 1px var(--bs-white))
 }
 
 #pageHeader .h1 {
 	font-weight: lighter;
+}
+
+.logout {
+	text-decoration: none;
 }
 
 /* SIDEBAR */
